--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-07 13:56+0100\n"
+"POT-Creation-Date: 2024-12-09 12:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #: .\MammaMia\settings.py:115
 msgid "English"
 msgstr ""
@@ -25,15 +26,51 @@ msgstr ""
 msgid "Español"
 msgstr ""
 
-#: .\MammaMia\urls.py:32
+#: .\MammaMia\urls.py:33
 msgid "admin/"
 msgstr ""
 
-#: .\appMammaMia\templates\index.html:12
+#: .\appMammaMia\templates\base.html:45
+msgid "Masas"
+msgstr "Doughs"
+
+#: .\appMammaMia\templates\base.html:48
+msgid "Ingredientes"
+msgstr "Ingredients"
+
+#: .\appMammaMia\templates\base.html:58
+msgid "Reservar mesa"
+msgstr "Reserve a table"
+
+#: .\appMammaMia\templates\base.html:78
+msgid "Lunes ~ Jueves (12:30-22:00)"
+msgstr "Monday ~ Thursday (12:30 - 22:00)"
+
+#: .\appMammaMia\templates\base.html:79
+msgid "Viernes ~ Sabado (12:30-00:00)"
+msgstr "Friday ~ Saturday (12:30 - 00:00)"
+
+#: .\appMammaMia\templates\base.html:82
+msgid "LLAMANOS"
+msgstr "CALL US"
+
+#: .\appMammaMia\templates\base.html:86
+msgid "ESCRIBENOS"
+msgstr "WRITE TO US"
+
+#: .\appMammaMia\templates\index.html:13
 msgid "Pizzas auténticas"
 msgstr "Authentic pizzas"
 
+#: .\appMammaMia\templates\index.html:14
+msgid "Nuestro menú"
+msgstr ""Our menu""
+
 #: .\appMammaMia\templates\index.html:25
+msgid "Acerca de nosotros"
+msgstr "About us"
+
+#: .\appMammaMia\templates\index.html:26
 msgid ""
 "Bienvenidos a Mamma Mia, donde la tradición italiana se encuentra con la "
 "innovación culinaria. Nuestra pizzería se enorgullece de utilizar solo los "
@@ -41,9 +78,14 @@ msgid ""
 "queso mozzarella fresco, todos seleccionados con esmero. Pero no nos "
 "detenemos ahí: nuestras recetas reinventan clásicos atemporales, fusionando "
 "sabores tradicionales con toques modernos."
-msgstr "Welcome to Mamma Mia, where Italian tradition meets culinary innovation. Our pizzeria prides itself on using only the most authentic ingredients, from Italian wheat flour to fresh mozzarella cheese, all carefully selected. But we don't stop there: our recipes reinvent timeless classics, blending traditional flavors with modern touches."
+msgstr ""
+"Welcome to Mamma Mia, where Italian tradition meets culinary innovation. Our "
+"pizzeria prides itself on using only the most authentic ingredients, from "
+"Italian wheat flour to fresh mozzarella cheese, all carefully selected. But "
+"we don't stop there: our recipes reinvent timeless classics, blending "
+"traditional flavors with modern touches."
 
-#: .\appMammaMia\templates\index.html:26
+#: .\appMammaMia\templates\index.html:27
 msgid ""
 "Desde nuestra masa artesanal, fermentada lentamente para lograr una textura "
 "perfecta, hasta combinaciones únicas de ingredientes frescos y salsas "
@@ -51,41 +93,50 @@ msgid ""
 "viaje a Italia, pero con un giro contemporáneo que deleitará tu paladar. Ven "
 "a disfrutar de una experiencia gastronómica que celebra lo mejor de la "
 "cocina italiana, con un enfoque creativo y apasionado. ¡Te esperamos!"
-msgstr "From our handcrafted dough, slowly fermented to achieve a perfect texture, to unique combinations of fresh ingredients and homemade sauces, each pizza tells a story. At Mamma Mia, every bite is a journey to Italy, but with a contemporary twist that will delight your taste buds. Come and enjoy a dining experience that celebrates the best of Italian cuisine, with a creative and passionate approach. We look forward to welcoming you!"
+msgstr ""
+"From our handcrafted dough, slowly fermented to achieve a perfect texture, "
+"to unique combinations of fresh ingredients and homemade sauces, each pizza "
+"tells a story. At Mamma Mia, every bite is a journey to Italy, but with a "
+"contemporary twist that will delight your taste buds. Come and enjoy a "
+"dining experience that celebrates the best of Italian cuisine, with a "
+"creative and passionate approach. We look forward to welcoming you!"
 
-#: .\appMammaMia\templates\index.html:34
+#: .\appMammaMia\templates\index.html:35
 msgid "NUESTRA SELECCION"
 msgstr "OUR SELECTION"
 
-#: .\appMammaMia\templates\index.html:49
+#: .\appMammaMia\templates\index.html:50
 msgid "NUESTRAS MASAS"
 msgstr "OUR DOUGHS"
 
-#: .\appMammaMia\templates\index.html:64
+#: .\appMammaMia\templates\index.html:80
 msgid "NUESTROS INGREDIENTES"
-msgstr ""
-
-#: .\appMammaMia\templates\index.html:81
-msgid "RESERVAR MESA"
 msgstr "OUR INGREDIENTS"
 
-#: .\appMammaMia\templates\index.html:98
-msgid "BUSCAR MESA"
-msgstr "BOOK A TABLE"
-
-#: .\appMammaMia\templates\index.html:108
+#: .\appMammaMia\templates\index.html:122
 msgid "RESEÑAS"
 msgstr "REVIEWS"
 
-#: .\appMammaMia\templates\index.html:147
+#: .\appMammaMia\templates\index.html:161
 msgid "ENCUENTRANOS"
 msgstr "FIND US"
 
-#: .\appMammaMia\templates\index.html:148
+#: .\appMammaMia\templates\index.html:162
 msgid ""
 "¡Descubre nuestra pizzería en el corazón de San Sebastián! Ubicados en una "
 "zona privilegiada, te ofrecemos un ambiente acogedor y familiar, ideal para "
 "disfrutar de deliciosas pizzas. Ven a visitarnos y déjate sorprender por "
 "nuestros sabores únicos, perfectos para compartir con amigos y familiares. "
 "¡Te esperamos para que vivas una experiencia culinaria inolvidable!"
-msgstr "Discover our pizzeria in the heart of San Sebastián! Located in a prime area, we offer a cozy and family-friendly atmosphere, perfect for enjoying delicious pizzas. Come visit us and let yourself be surprised by our unique flavors, ideal for sharing with friends and family. We look forward to welcoming you for an unforgettable culinary experience!"
+msgstr ""
+"Discover our pizzeria in the heart of San Sebastián! Located in a prime "
+"area, we offer a cozy and family-friendly atmosphere, perfect for enjoying "
+"delicious pizzas. Come visit us and let yourself be surprised by our unique "
+"flavors, ideal for sharing with friends and family. We look forward to "
+"welcoming you for an unforgettable culinary experience!"
+
+#~ msgid "RESERVAR MESA"
+#~ msgstr "BOOK A TABLE"
+
+#~ msgid "BUSCAR MESA"
+#~ msgstr "FIND A TABLE"
